implement and configure redis cache

--- a/src/Map/appsettings.Development.json
+++ b/src/Map/appsettings.Development.json
@@ -10,6 +10,10 @@
     "Username": "neo4j",
     "Password": "password"
   },
-  "GoogleApiKey": "apikey"
-
+  "GoogleApiKey": "apikey",
+  "Redis": {
+    "Configuration": "127.0.0.1:6379",
+    "InstanceName": "master",
+    "Password": "Password1"
+  }
 }
