--- a/src/Map/Map.csproj
+++ b/src/Map/Map.csproj
@@ -9,7 +9,9 @@
     <ItemGroup>
         <PackageReference Include="Google.OrTools" Version="9.11.4210" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.0" />
         <PackageReference Include="Neo4j.Driver" Version="5.26.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Scalar.AspNetCore" Version="1.2.42" />
     </ItemGroup>
 
